--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+button{
+  padding: 5px 10px;
+  min-width: 50px;
 }
